Initial config and build changes for PKI fork of spark-job-server